feat: filter GC heap stat by generation
